--- a/success.html
+++ b/success.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <div class="font-raleway max-w-6xl flex flex-col justify-center items-center mx-auto">
+    <div class="roboto-font max-w-6xl flex flex-col justify-center items-center mx-auto">
         <img src="images/success.png" alt="">
         <h2 class="text-green-600 text-xl font-semibold">SUCCESS</h2>
         <h2>Thank you for Booking Our Bus Seats. We are working hard to find the best service and deals for you.</h2>
