--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
                 <div class="navbar-end">
                   <a class="btn bg-green-300 text-green-800">
                     Bus
-                    <img src="images/bus-icon.png" alt="">
+                    <img src="./images/bus-icon.png" alt="">
                 </a>
                 </div>
               </div>
         </div>
 
         <!--  Banner -->
-        <div class="hero min-h-screen relative" style="background-image: url(images/banner.png);">
+        <div class="hero min-h-screen relative" style="background-image: url(./images/banner.png);">
             <div class="hero-overlay bg-opacity-60"></div>
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-lg">
                 <h1 class="mb-5 text-4xl font-bold">End-to-End Travel with</h1>
                 <h2 class="mb-5 text-4xl font-bold text-[#1DD100]">Smart Ticketing</h2>
                 <p class="mb-5">Revolutionize your travel experience with our smart ticketing system, featuring secure two-line tags for swift access and seamless journeys</p>
-                <button class="btn btn-primary bg-[#1DD100]">Buy Tickets</button>
+                <a href="#abcd"><button class="btn btn-primary bg-[#1DD100]">Buy Tickets</button></a>
               </div>
             </div>
 
@@ -68,7 +68,7 @@
                 <div class="card w-[400px] lg:w-[300px] bg-base-100 shadow-xl border-b-4 border-b-green-500">
                     <div class="card-body">
                         <div class="flex">
-                            <img src="images/people.png" alt="">
+                            <img src="./images/people.png" alt="">
                             <div class="">
                                 <h2 class="card-title">500K+</h2>
                                 <p>Registered users</p>
@@ -79,7 +79,7 @@
                 <div class="card w-[400px] lg:w-[300px] bg-base-100 shadow-xl border-b-4 border-b-green-500">
                     <div class="card-body">
                         <div class="flex">
-                            <img src="images/people.png" alt="">
+                            <img src="./images/ticket-cupon.png" alt="">
                             <div class="">
                                 <h2 class="card-title">500K+</h2>
                                 <p>Registered users</p>
@@ -90,7 +90,7 @@
                 <div class="card w-[400px] lg:w-[300px] bg-base-100 shadow-xl border-b-4 border-b-green-500">
                     <div class="card-body">
                         <div class="flex">
-                            <img src="images/people.png" alt="">
+                            <img src="./images/stoppage.png" alt="">
                             <div class="">
                                 <h2 class="card-title">500K+</h2>
                                 <p>Registered users</p>
@@ -166,7 +166,7 @@
                     <div class="flex flex-col md:flex-row justify-between w-[90%]">
                         <!-- options -->        
                         <div class="flex gap-6">
-                            <img class="w-12" src="images/bus-logo.png" alt="">
+                            <img class="w-12" src="./images/bus-logo.png" alt="">
                             <div>
                                 <h2 class="text-2xl font-bold"> Greenline Paribahan</h2>
                                 <p class="text-base text-[#03071299] ">Coach-009-WEB ! AC_Business</p>
@@ -174,7 +174,7 @@
 
                         </div>
                         <div class="flex">
-                            <button class="btn btn-primary bg-[#edf0ed] mt-7 text-green-500 border-green-500 text-center"><img src="images/seat-green.png" alt=""><span id ="total_seat">40</span> Seats Left</button>
+                            <button class="btn btn-primary bg-[#edf0ed] mt-7 text-green-500 border-green-500 text-center"><img src="./images/seat-green.png" alt=""><span id ="total_seat">40</span> Seats Left</button>
                         </div>
                     </div>
                     <div class="bg-[#F7F8F8]">
@@ -199,7 +199,7 @@
                 <!-- vertical line -->
                 <div class="vertical-line-green"></div>
                 <div class="flex flex-col justify-center items-center">
-                    <img src="images/fare.png" alt="">
+                    <img src="./images/fare.png" alt="">
                     <h2 class="text-xl font-bold"><span id="price-per-seat">550</span> Taka</h2>
                     <h2 class="text-m"> Per Seat</h2>
                     
@@ -223,19 +223,19 @@
 
                 <div class="flex justify-between ">
                     <div class="flex">
-                        <img src="images/seat-gray.png" alt="">
+                        <img src="./images/seat-gray.png" alt="">
                         <p>Available</p>
                     </div>
                     <div class="flex">
-                        <img src="images/seat-green-filled.png" alt="">
+                        <img src="./images/seat-green-filled.png" alt="">
                         <p>Selected</p>
                     </div>
                 </div>
                 <div class="horizontal-line w-full"></div>
 
                 <!-- Bus seat -->
-                <div class="grid gap-5 grid-cols-5 p-7">
-                    <button class="btn btn-xs col-start-5 w-[70px] rounded-md"><img src="images/seat-gray.png" alt=""></button>
+                <div id="abcd" class="grid gap-5 grid-cols-5 p-7">
+                    <button class="btn btn-xs col-start-5 w-[70px] rounded-md"><img src="./images/seat-gray.png" alt=""></button>
                     <p>A</p>
                     <button class="seat btn btn-xs w-[70px] rounded-md">A1</button>
                     <button class="seat btn btn-xs w-[70px] rounded-md">A2</button>
@@ -335,24 +335,24 @@
                         <div class="label">
                           <span class="label-text">Passenger Name* </span>
                         </div>
-                        <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+                        <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" id="name" />
                       </label>
                     <label class="form-control w-full max-w-xs">
                         <div class="label">
                           <span class="label-text">Phone Number* </span>
                         </div>
-                        <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+                        <input type="text" placeholder="Type here" id= "phone" class=" input input-bordered w-full max-w-xs" />
                       </label>
                     <label class="form-control w-full max-w-xs">
                         <div class="label">
                           <span class="label-text">Email ID</span>
                         </div>
-                        <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+                        <input type="text" placeholder="Type here" id= "email" class="input input-bordered w-full max-w-xs" />
                       </label>
 
                       <!-- button -->
                       <label class="form-control w-full max-w-xs">
-                        <button id= "next" class="btn btn-primary bg-[#1DD100]  text-center mt-5">Next</button>
+                        <button id= "next" class=" btn btn-primary bg-[#1DD100]  text-center mt-5">Next</button>
                         <div class="label">
                           <span class="label-text-alt underline">Terms and conditions</span>
                           <span class="label-text-alt underline">Cancelation policy</span>
@@ -378,7 +378,7 @@
           <h6 class="footer-title">Download our app</h6> 
           <div class="flex gap-2">
             <div >
-              <img src="images/playstore.png" alt="">
+              <img src="./images/playstore.png" alt="">
             </div>
             <div>
               <p>Get it on</p>
@@ -406,7 +406,7 @@
     <!-- Another footer to show in pop up -->
     <div id="success" class="hidden">
       <div class="font-raleway max-w-6xl flex flex-col justify-center items-center mx-auto">
-        <img src="images/success.png" alt="">
+        <img src="./images/success.png" alt="">
         <h2 class="text-green-600 text-xl font-semibold">SUCCESS</h2>
         <h2>Thank you for Booking Our Bus Seats. We are working hard to find the best service and deals for you.</h2>
         <p> Shortly you will find a confirmation in your email</p>
